# rinha2-back-end-rust

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml
.agents/memory/: MEMORY.md  architecture.md
.claude/memory/: architecture.md
.github/: dependabot.yml  docs-template.html  generate-docs.js
.github/workflows/: build-check-webapi.yml  build-check.yml  codeql.yml  deploy-docs.yml  deploy.yml  main-release-webapi.yml  main-release.yml
.impeccable/critique/: 2026-05-16T22-22-50Z__docs-src-pages-index-astro.md
docker-entrypoint-initdb.d/: rinha.dump.sql
docs/: README.md  astro.config.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  robots.txt
docs/css/: style.css
docs/docs/: index.html
docs/js/: script.js
docs/public/: sitemap.xml
docs/public/reports/: stress-test-report-20250313211515.html  stress-test-report-20250313212731.html  (+20 more)
docs/reports/: stress-test-report-20260330220715.html  stress-test-report-20260331030901.html  stress-test-report-20260331042746.html  stress-test-report-20260331043937.html  stress-test-report-20260331153330.html  stress-test-report-20260331154404.html  stress-test-report-20260401053021.html  stress-test-report-20260401082755.html
docs/src/hooks/: useScrollspy.ts
docs/wiki/: architecture.md  challenge.md  ci-cd-pipeline.md  getting-started.md  home.md  performance.md
prod/: docker-compose.yml
scripts/: check_docs_drift.py
src/WebApi/: Cargo.toml  Dockerfile
wiki/: CI-CD-Pipeline.md  Challenge.md  Getting-Started.md  Performance.md  index.md
(+21 files in other folders)
