[package]
name = "rinha2-back-end-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rinha2-back-end-rust"
path = "main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "json", "time"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.17"
time = "0.3"